--- a/Contact.html
+++ b/Contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
     <title>Contact</title>
 </head>
@@ -87,7 +88,7 @@
                     <div class="hamburger-icon">
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                    
+
                 </div>
                 <div class="search-input d-none mt-2">
                     <div class="border"></div>
@@ -101,7 +102,7 @@
                         <li><a href="Shop.html">Shop</a></li>
                         <li><a href="#">Contact</a></li>
                         <li><a href="Blog.html">Blog</a></li>
-                        
+
                     </ul>
                 </div>
             </div>
@@ -112,9 +113,9 @@
         <section id="map">
             <div class="container">
                 <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24313.215380891517!2d49.86191205!3d40.3833254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2saz!4v1678084299482!5m2!1sen!2saz"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d24313.215380891517!2d49.86191205!3d40.3833254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2saz!4v1678084299482!5m2!1sen!2saz"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
         <section id="contact">
