--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
     <title>Product-Detail</title>
 </head>
@@ -87,7 +88,7 @@
                     <div class="hamburger-icon">
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                    
+
                 </div>
                 <div class="search-input d-none mt-2">
                     <div class="border"></div>
@@ -101,7 +102,7 @@
                         <li><a href="Shop.html">Shop</a></li>
                         <li><a href="Contact.html">Contact</a></li>
                         <li><a href="Blog.html">Blog</a></li>
-                        
+
                     </ul>
                 </div>
             </div>
@@ -110,8 +111,7 @@
     </header>
     <main>
         <section id="background">
-            <div class="background-images"
-                style="background-image:url(./assets/images/product-detail/bacground.jpg)">
+            <div class="background-images" style="background-image:url(./assets/images/product-detail/bacground.jpg)">
                 <h2>Product Detail</h2>
             </div>
         </section>
@@ -261,13 +261,15 @@
             <div class="container">
                 <div class="tab-menu">
                     <ul id="myBtnContainer">
-                        <li  onclick="filterSelection('description')" class="item1 active btn-tab" data-id="description"><a>Description</a>
+                        <li onclick="filterSelection('description')" class="item1 active btn-tab" data-id="description">
+                            <a>Description</a>
                         </li>
                         <li onclick="filterSelection('additional')" class="item2 btn-tab" data-id="additional">
-                            <a >
+                            <a>
                                 Additional</a>
                         </li>
-                        <li onclick="filterSelection('reviews')" class="item3 btn-tab" data-id="reviews"><a>Reviews <span>(0)</span></a>
+                        <li onclick="filterSelection('reviews')" class="item3 btn-tab" data-id="reviews"><a>Reviews
+                                <span>(0)</span></a>
                         </li>
                     </ul>
                 </div>
