--- a/Shop.html
+++ b/Shop.html
@@ -11,6 +11,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/scss/style.css">
+    <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <title>Shop</title>
 </head>
 
@@ -87,7 +88,7 @@
                     <div class="hamburger-icon">
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                    
+
                 </div>
                 <div class="search-input d-none mt-2">
                     <div class="border"></div>
@@ -101,7 +102,7 @@
                         <li><a href="#">Shop</a></li>
                         <li><a href="Contact.html">Contact</a></li>
                         <li><a href="Blog.html">Blog</a></li>
-                        
+
                     </ul>
                 </div>
             </div>
@@ -110,8 +111,7 @@
     </header>
     <main>
         <section id="background">
-            <div class="background-images"
-                style="background-image:url(./assets/images/shop/bookstore.jpg)">
+            <div class="background-images" style="background-image:url(./assets/images/shop/bookstore.jpg)">
                 <h2>Shop</h2>
             </div>
         </section>
@@ -137,7 +137,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-1.jpg"alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-1.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">John Strass</a>
@@ -190,8 +191,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-4.jpg" alt=""><a
-                                                href=""></a></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-4.jpg"
+                                                alt=""><a href=""></a></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">James Hoffman</a>
@@ -208,7 +209,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-5.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-5.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">Adam Strass</a>
@@ -225,7 +227,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-6.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-6.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">John Strass</a>
@@ -242,7 +245,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-7.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-7.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">James Hoffman</a>
@@ -259,7 +263,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-8.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-8.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">Jane Doe</a>
@@ -276,7 +281,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-9.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-9.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">Jessica Johnson</a>
@@ -293,7 +299,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-10.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-10.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">John Strass</a>
@@ -310,7 +317,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-11.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-11.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">Adam Strass</a>
@@ -327,7 +335,8 @@
                             <div class="col-lg-4 col-md-6 col-sm-12">
                                 <div class="products">
                                     <div class="image">
-                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-12.jpg" alt=""></a>
+                                        <a href="ProductDetail.html"><img src="./assets/images/shop/product-12.jpg"
+                                                alt=""></a>
                                     </div>
                                     <div class="name">
                                         <a href="ProductDetail.html">James Hoffman</a>
