--- a/Wishlist.html
+++ b/Wishlist.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
     <title>Wishlist</title>
 </head>
+
 <body>
     <header>
         <section id="navbar" class="d-lg-block d-none">
@@ -85,7 +88,7 @@
                     <div class="hamburger-icon">
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                    
+
                 </div>
                 <div class="search-input d-none mt-2">
                     <div class="border"></div>
@@ -99,7 +102,7 @@
                         <li><a href="Shop.html">Shop</a></li>
                         <li><a href="Contact.html">Contact</a></li>
                         <li><a href="Blog.html">Blog</a></li>
-                        
+
                     </ul>
                 </div>
             </div>
@@ -130,7 +133,8 @@
 
                         </tbody>
                         <tr>
-                            <td><button class="btn btn-primary btn"><a href="Shop.html">Continue shopping</a></button></td>
+                            <td><button class="btn btn-primary btn"><a href="Shop.html">Continue shopping</a></button>
+                            </td>
                             <td></td>
                             <td></td>
 
@@ -174,10 +178,14 @@
                                 <p>follow us on social media and learn about</p>
                                 <p>new promotions.</p>
                                 <div class="icons">
-                                    <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                                    <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                                    <a href="https://dribbble.com/" target="_blank"><i class="fa-solid fa-basketball"></i></a>
+                                    <a href="https://twitter.com/" target="_blank"><i
+                                            class="fa-brands fa-twitter"></i></a>
+                                    <a href="https://www.instagram.com/?hl=en" target="_blank"><i
+                                            class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/" target="_blank"><i
+                                            class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="https://dribbble.com/" target="_blank"><i
+                                            class="fa-solid fa-basketball"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -239,4 +247,5 @@
     <script src="./assets/js/wishlist.js"></script>
     <script src="./assets/js/common.js"></script>
 </body>
+
 </html>
