--- a/Blog.html
+++ b/Blog.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
     <title>Blog</title>
 </head>
@@ -87,7 +88,7 @@
                     <div class="hamburger-icon">
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                    
+
                 </div>
                 <div class="search-input d-none mt-2">
                     <div class="border"></div>
@@ -101,7 +102,7 @@
                         <li><a href="Shop.html">Shop</a></li>
                         <li><a href="Contact.html">Contact</a></li>
                         <li><a href="#">Blog</a></li>
-                        
+
                     </ul>
                 </div>
             </div>
@@ -110,8 +111,7 @@
     </header>
     <main>
         <section id="background">
-            <div class="blog-background-images"
-                style="background-image:url(./assets/images/blog/blog-background.jpg)">
+            <div class="blog-background-images" style="background-image:url(./assets/images/blog/blog-background.jpg)">
                 <h2>Blog</h2>
             </div>
         </section>
@@ -338,7 +338,8 @@
                             </div>
                             <div class="image-name">
                                 <div class="image">
-                                    <a href="ProductDetail.html"><img src="./assets/images/blog/product-1.jpg" alt=""></a>
+                                    <a href="ProductDetail.html"><img src="./assets/images/blog/product-1.jpg"
+                                            alt=""></a>
                                 </div>
                                 <div class="name-price">
                                     <a href="">Winter Darkest Tragedy</a>
@@ -347,7 +348,8 @@
                             </div>
                             <div class="image-name mt-2">
                                 <div class="image">
-                                    <a href="ProductDetail.html"><img src="./assets/images/blog/product-2.jpg" alt=""></a>
+                                    <a href="ProductDetail.html"><img src="./assets/images/blog/product-2.jpg"
+                                            alt=""></a>
                                 </div>
                                 <div class="name-price">
                                     <a href="ProductDetail.html">Symphony Of Trilogy</a>
@@ -356,7 +358,8 @@
                             </div>
                             <div class="image-name mt-2">
                                 <div class="image">
-                                    <a href="ProductDetail.html"><img src="./assets/images/blog/product-3.jpg" alt=""></a>
+                                    <a href="ProductDetail.html"><img src="./assets/images/blog/product-3.jpg"
+                                            alt=""></a>
                                 </div>
                                 <div class="name-price">
                                     <a href="ProductDetail.html">Wellness And Paradise</a>
@@ -365,7 +368,8 @@
                             </div>
                             <div class="image-name mt-2">
                                 <div class="image">
-                                    <a href="ProductDetail.html"><img src="./assets/images/blog/product-4.jpg" alt=""></a>
+                                    <a href="ProductDetail.html"><img src="./assets/images/blog/product-4.jpg"
+                                            alt=""></a>
                                 </div>
                                 <div class="name-price">
                                     <a href="ProductDetail.html">Renaissance History</a>
