--- a/Home.html
+++ b/Home.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
     <title>Home</title>
 </head>
@@ -183,6 +184,7 @@
                             <div class="price-button">
                                 <p>$38.00</p>
                                 <button class="btn btn-success btn-sm">Add to cart</button>
+                                <button class="btn btn2 btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
                     </div>
