Add New Section

--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
                             </div>
                             <div class="pages">
                                 <ul>
-                                    <li><a href="#">Home</a></li>
+                                    <li class="active-navbar"><a href="Home.html" >Home</a></li>
                                     <li><a href="About.html">About</a></li>
                                     <li><a href="Shop.html">Shop</a></li>
                                     <li><a href="Contact.html">Contact</a></li>
@@ -184,7 +184,7 @@
                             <div class="price-button">
                                 <p>$38.00</p>
                                 <button class="btn btn-success btn-sm">Add to cart</button>
-                                <button class="btn btn2 btn-success btn-sm">Add to cart</button>
+                                <!-- <button class="btn btn2 btn-success btn-sm">Add to cart</button> -->
                             </div>
                         </div>
                     </div>
