Add New Section

--- a/About.html
+++ b/About.html
@@ -30,7 +30,7 @@
                             <div class="pages">
                                 <ul>
                                     <li><a href="Home.html">Home</a></li>
-                                    <li><a href="#">About</a></li>
+                                    <li class="active-menu"><a href="#">About</a></li>
                                     <li><a href="Shop.html">Shop</a></li>
                                     <li><a href="Contact.html">Contact</a></li>
                                     <li><a href="Blog.html">Blog</a></li>
