--- a/Contact.html
+++ b/Contact.html
@@ -30,7 +30,7 @@
                                     <li><a href="Home.html">Home</a></li>
                                     <li><a href="About.html">About</a></li>
                                     <li><a href="Shop.html">Shop</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li class="active-menu"><a href="#">Contact</a></li>
                                     <li><a href="Blog.html">Blog</a></li>
                                 </ul>
                             </div>
