--- a/Blog.html
+++ b/Blog.html
@@ -31,7 +31,7 @@
                                     <li><a href="About.html">About</a></li>
                                     <li><a href="Shop.html">Shop</a></li>
                                     <li><a href="Contact.html">Contact</a></li>
-                                    <li><a href="#">Blog</a></li>
+                                    <li class="active-menu"><a href="#">Blog</a></li>
                                 </ul>
                             </div>
                         </div>
