--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
                             </div>
                             <div class="pages">
                                 <ul>
-                                    <li class="active-navbar"><a href="Home.html" >Home</a></li>
+                                    <li class="active-menu"><a href="Home.html" >Home</a></li>
                                     <li><a href="About.html">About</a></li>
                                     <li><a href="Shop.html">Shop</a></li>
                                     <li><a href="Contact.html">Contact</a></li>
