--- a/Shop.html
+++ b/Shop.html
@@ -29,7 +29,7 @@
                                 <ul>
                                     <li><a href="Home.html">Home</a></li>
                                     <li><a href="About.html">About</a></li>
-                                    <li><a href="#">Shop</a></li>
+                                    <li class="active-menu"><a href="#">Shop</a></li>
                                     <li><a href="Contact.html">Contact</a></li>
                                     <li><a href="Blog.html">Blog</a></li>
                                 </ul>
