Add New Section

--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./assets/slick-1.8.1/slick/slick.css">
     <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
-    <title>About</title>
+    <title>ChapterOne - About</title>
 </head>
 
 <body>
