--- a/Shop.html
+++ b/Shop.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/scss/style.css">
     <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
-    <title>Shop</title>
+    <title>ChapterOne - Shop</title>
 </head>
 
 <body>
@@ -134,7 +134,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-1.jpg"
@@ -148,11 +148,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$38.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-2.jpg"
@@ -166,11 +169,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$22.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-3.jpg"
@@ -184,11 +190,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$67.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-4.jpg"
@@ -202,11 +211,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$30.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-5.jpg"
@@ -220,11 +232,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$29.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-6.jpg"
@@ -238,11 +253,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$78.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-7.jpg"
@@ -256,11 +274,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$69.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-8.jpg"
@@ -274,11 +295,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$33.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-9.jpg"
@@ -292,11 +316,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$50.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-10.jpg"
@@ -310,11 +337,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$56.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-11.jpg"
@@ -328,11 +358,14 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$46.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
                                 </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-6 col-sm-12 all-products">
                                 <div class="products">
                                     <div class="image">
                                         <a href="ProductDetail.html"><img src="./assets/images/shop/product-12.jpg"
@@ -346,8 +379,11 @@
                                     </div>
                                     <div class="price-button">
                                         <p>$37.00</p>
-                                        <button class="btn btn-success btn-sm">Add to cart</button>
                                     </div>
+                                </div>
+                                <div class="wishlist-cart">
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
                                 </div>
                             </div>
                         </div>
