--- a/Blog.html
+++ b/Blog.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
-    <title>Blog</title>
+    <title>ChapterOne - Blog</title>
 </head>
 
 <body>
