--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
-    <title>Contact</title>
+    <title>ChapterOne - Contact</title>
 </head>
 
 <body>
