--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
-    <title>Home</title>
+    <title>ChapterOne - Home</title>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
                             </div>
                             <div class="pages">
                                 <ul>
-                                    <li class="active-menu"><a href="Home.html" >Home</a></li>
+                                    <li class="active-menu"><a href="#">Home</a></li>
                                     <li><a href="About.html">About</a></li>
                                     <li><a href="Shop.html">Shop</a></li>
                                     <li><a href="Contact.html">Contact</a></li>
@@ -172,7 +172,7 @@
                     </div>
 
 
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv fantasy all">
                         <div class="products" data-id="1">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-1.jpg" alt=""></a>
                             <div class="name">
@@ -183,12 +183,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$38.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
-                                <!-- <button class="btn btn2 btn-success btn-sm">Add to cart</button> -->
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv fantasy all">
                         <div class="products" data-id="2">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-2.jpg" alt=""></a>
                             <div class="name">
@@ -199,11 +201,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$22.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv bestsellers all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv bestsellers all">
                         <div class="products" data-id="3">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-3.jpg" alt=""></a>
                             <div class="name">
@@ -214,11 +219,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$67.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv history all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv history all">
                         <div class="products" data-id="4">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-4.jpg" alt=""></a>
                             <div class="name">
@@ -229,11 +237,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$30.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv bestsellers history all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv bestsellers history all">
                         <div class="products" data-id="5">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-5.jpg" alt=""></a>
                             <div class="name">
@@ -244,11 +255,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$29.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv art all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv art all">
                         <div class="products" data-id="6">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-6.jpg" alt=""></a>
                             <div class="name">
@@ -259,11 +273,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$78.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv art all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv art all">
                         <div class="products" data-id="7">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-7.jpg" alt=""></a>
                             <div class="name">
@@ -274,11 +291,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$69.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv bestsellers lovestories all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv bestsellers lovestories all all-products">
                         <div class="products" data-id="8">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-8.jpg" alt=""></a>
                             <div class="name">
@@ -289,11 +309,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$33.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv lovestories all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv lovestories all">
                         <div class="products" data-id="9">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-9.jpg" alt=""></a>
                             <div class="name">
@@ -304,11 +327,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$50.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv all">
                         <div class="products" data-id="10">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-10.jpg" alt=""></a>
                             <div class="name">
@@ -319,11 +345,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$56.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 all-products filterDiv fantasy all">
                         <div class="products" data-id="11">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-11.webp" alt=""></a>
                             <div class="name">
@@ -334,11 +363,14 @@
                             </div>
                             <div class="price-button">
                                 <p>$66.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv fantasy all">
+                    <div class="col-lg-3 col-md-6 col-sm-12 filterDiv fantasy all all-products">
                         <div class="products" data-id="2">
                             <a href="ProductDetail.html"><img src="./assets/images/home/product-12.png" alt=""></a>
                             <div class="name">
@@ -349,11 +381,13 @@
                             </div>
                             <div class="price-button">
                                 <p>$45.00</p>
-                                <button class="btn btn-success btn-sm">Add to cart</button>
                             </div>
                         </div>
+                        <div class="wishlist-cart">
+                            <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
+                            <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                        </div>
                     </div>
-
                 </div>
             </div>
         </section>
