--- a/VerifyEmail.html
+++ b/VerifyEmail.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
+    <link rel="stylesheet" href="./assets/slick-1.8.1/slick/slick-theme.css">
+    <link rel="stylesheet" href="./assets/slick-1.8.1/slick/slick.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
     <link rel="stylesheet" href="./assets/scss/style.css">
-    <title>ChapterOne - Login</title>
+    <title>ChapterOne - VerifyEmail</title>
 </head>
 
 <body>
@@ -27,7 +30,7 @@
                             </div>
                             <div class="pages">
                                 <ul>
-                                    <li><a href="Home.html">Home</a></li>
+                                    <li class="active-menu"><a href="Home.html">Home</a></li>
                                     <li><a href="About.html">About</a></li>
                                     <li><a href="Shop.html">Shop</a></li>
                                     <li><a href="Contact.html">Contact</a></li>
@@ -63,7 +66,7 @@
                             <div class="border"></div>
                         </div>
                         <div class="login-register d-none">
-                            <a href="#">Login</a>
+                            <a href="Login.html">Login</a>
                             <div class="border"></div>
                             <a href="Register.html">Register</a>
                         </div>
@@ -75,12 +78,12 @@
             <div class="container">
                 <div class="nav">
                     <div class="logo-img">
-                        <a href="Home.html"><img src="./assets/images/home/book-logo-5.png" alt=""></a>
+                        <a href="#"><img src="./assets/images/home/book-logo-5.png" alt=""></a>
                     </div>
                     <div class="icons">
                         <ul>
                             <li><a href="Cart.html"><i class="fa-solid fa-cart-shopping"></i></a></li>
-                            <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
+                            <li><a href="Login.html"><i class="fa-solid fa-user"></i></a></li>
                             <li><a href="Wishlist.html"><i class="fa-solid fa-heart"></i></a></li>
                             <li><i class="fa-solid fa-magnifying-glass search"></i></li>
                         </ul>
@@ -97,7 +100,7 @@
                 </div>
                 <div class="hamburger-menu d-none">
                     <ul>
-                        <li><a href="Home.html">Home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="About.html">About</a></li>
                         <li><a href="Shop.html">Shop</a></li>
                         <li><a href="Contact.html">Contact</a></li>
@@ -110,53 +113,11 @@
         <div class="border mt-3 d-lg-none d-block"></div>
     </header>
     <main>
-        <section id="background">
-            <div class="login-background-images"
-                style="background-image:url(./assets/images/login/login-backgorund-image.jpg)">
-                <h2>Login</h2>
+        <div class="container" style="margin-top: 100px">
+            <div class="alert alert-success" role="alert">
+                Please check your email for register confirmation
             </div>
-        </section>
-        <section id="login-form">
-            <div class="container">
-                <div class="login">
-                    <h2>Login</h2>
-                </div>
-                <div class="username-label">
-                    <label for="">Username or email address *</label>
-                </div>
-                <div class="username-input">
-                    <input type="email">
-                </div>
-                <div class="password-label">
-                    <label for="">Password *</label>
-                </div>
-                <div class="password-input">
-                    <input type="password">
-                    <i class="fa-regular fa-eye eyes"></i>
-                </div>
-                <div class="remenber-login">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-                        <label style="color:gray" class="form-check-label" for="form2Example31"> Remember me </label>
-                    </div>
-                    <div class="login-button">
-                        <button>LOG IN</button>
-                    </div>
-                </div>
-                <div class="forgot-password">
-                    <a href="ForgotPassword.html">Forgot Password?</a>
-                </div>
-                <div class="account">
-                    <div class="dont-account">
-                        <p>Don't have an account?</p>
-                    </div>
-                    <div class="register">
-                        <a href="Register.html">Register</a>
-                    </div>
-                </div>
-
-            </div>
-        </section>
+        </div>
     </main>
     <footer>
         <section id="footer">
@@ -210,7 +171,7 @@
                         <div class="right">
                             <h4>Social media</h4>
                             <div class="story">
-                                <div class="col-4">
+                                <div class="col-lg-4 col-md-6 col-sm-12">
                                     <div class="images1">
                                         <img src="./assets/images/home/footer-image-1.jpg" alt="">
                                         <img src="./assets/images/home/footer-image-2.jpg" alt="">
@@ -235,12 +196,11 @@
     </footer>
 
 
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous">
-        </script>
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
@@ -249,7 +209,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./assets/slick-1.8.1/slick/slick.js"></script>
     <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
-    <script src="./assets/js/login.js"></script>
     <script src="./assets/js/common.js"></script>
 </body>
 
