Add New Section

--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -141,8 +141,9 @@
                                     irure dolor in reprehenderit in voluptate velit. Simul vidisse eu vim. Probo
                                     tincidunt ne vel.</p>
                             </div>
-                            <div class="add-basket-button">
+                            <div class="add-basket-button d-flex">
                                 <button>ADD TO BASKET</button>
+                                <button>ADD TO WISHLIST</button>
                             </div>
                             <div class="sku-code">
                                 <p>SKU:</p>
