Add New Section

--- a/About.html
+++ b/About.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- Header Area -->
     <header>
         <section id="navbar" class="d-lg-block d-none">
             <div class="container">
@@ -53,6 +54,9 @@
                             </div>
                             <div class="wishlist">
                                 <a href="Wishlist.html"><i class="fa-solid fa-heart"></i></a>
+                                <div class="wishlist-number">
+                                    <span>0</span>
+                                </div>
                                 <span class="border"></span>
                             </div>
                             <div class="search">
@@ -111,6 +115,9 @@
         </section>
         <div class="border mt-3 d-lg-none d-block"></div>
     </header>
+    <!-- Header Area -->
+
+    <!-- Main Area -->
     <main>
         <section id="background">
             <div class="background-image"
@@ -432,6 +439,9 @@
             </div>
         </section>
     </main>
+    <!-- Main Area -->
+
+    <!-- Footer Area -->
     <footer>
         <section id="footer">
             <div class="container footer-background-color">
@@ -507,8 +517,9 @@
             </div>
         </section>
     </footer>
+    <!-- Footer Area -->
 
-
+    
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
