--- a/Home.html
+++ b/Home.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js">
-    <link rel="stylesheet" href="./assets/slick-1.8.1/slick/slick-theme.css">
-    <link rel="stylesheet" href="./assets/slick-1.8.1/slick/slick.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -19,6 +17,7 @@
 </head>
 
 <body>
+    <!-- Header Area -->
     <header>
         <section id="navbar" class="d-lg-block d-none">
             <div class="container">
@@ -54,6 +53,9 @@
                             </div>
                             <div class="wishlist">
                                 <a href="Wishlist.html"><i class="fa-solid fa-heart"></i></a>
+                                <div class="wishlist-number">
+                                    <span>0</span>
+                                </div>
                                 <span class="border"></span>
                             </div>
                             <div class="search">
@@ -112,6 +114,9 @@
         </section>
         <div class="border mt-3 d-lg-none d-block"></div>
     </header>
+    <!-- Header Area -->
+
+    <!-- Main Area -->
     <main>
         <section id="slider">
             <div class="container">
@@ -708,6 +713,9 @@
             </div>
         </section>
     </main>
+    <!-- Main Area -->
+
+    <!-- Footer Area -->
     <footer>
         <section id="footer">
             <div class="container footer-background-color">
@@ -783,7 +791,9 @@
             </div>
         </section>
     </footer>
+    <!-- Footer Area -->
 
+    
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
@@ -795,10 +805,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
         integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./assets/slick-1.8.1/slick/slick.js"></script>
-    <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
-    <script src="./assets/js/common.js"></script>
     <script src="./assets/js/home.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
