--- a/ProductDetail.html
+++ b/ProductDetail.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- Header Area -->
     <header>
         <section id="navbar" class="d-lg-block d-none">
             <div class="container">
@@ -51,6 +52,9 @@
                             </div>
                             <div class="wishlist">
                                 <a href="Wishlist.html"><i class="fa-solid fa-heart"></i></a>
+                                <div class="wishlist-number">
+                                    <span>0</span>
+                                </div>
                                 <span class="border"></span>
                             </div>
                             <div class="search">
@@ -109,6 +113,9 @@
         </section>
         <div class="border mt-3 d-lg-none d-block"></div>
     </header>
+    <!-- Header Area -->
+
+    <!-- Main Area -->
     <main>
         <section id="background">
             <div class="background-images" style="background-image:url(./assets/images/product-detail/bacground.jpg)">
@@ -417,6 +424,9 @@
             </div>
         </section>
     </main>
+    <!-- Main Area -->
+
+    <!-- Footer Area -->
     <footer>
         <section id="footer">
             <div class="container footer-background-color">
@@ -492,21 +502,15 @@
             </div>
         </section>
     </footer>
+    <!-- Footer Area -->
 
-
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-        crossorigin="anonymous"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
         integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./assets/slick-1.8.1/slick/slick.js"></script>
-    <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/productdetail.js"></script>
     <script src="./assets/js/common.js"></script>
 </body>
