--- a/Shop.html
+++ b/Shop.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assets/scss/style.css">
     <link rel="icon" type="image/png" href="./assets/images/home/book-logo-5.png" />
+    <link rel="stylesheet" href="./assets/scss/style.css">
     <title>ChapterOne - Shop</title>
 </head>
 
 <body>
+    <!-- Header Area -->
     <header>
         <section id="navbar" class="d-lg-block d-none">
             <div class="container">
@@ -51,6 +52,9 @@
                             </div>
                             <div class="wishlist">
                                 <a href="Wishlist.html"><i class="fa-solid fa-heart"></i></a>
+                                <div class="wishlist-number">
+                                    <span>0</span>
+                                </div>
                                 <span class="border"></span>
                             </div>
                             <div class="search">
@@ -109,6 +113,9 @@
         </section>
         <div class="border mt-3 d-lg-none d-block"></div>
     </header>
+    <!-- Header Area -->
+
+    <!-- Main Area -->
     <main>
         <section id="background">
             <div class="background-images" style="background-image:url(./assets/images/shop/bookstore.jpg)">
@@ -151,8 +158,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -172,8 +181,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -193,8 +204,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -214,8 +227,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -235,8 +250,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -256,8 +273,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -277,8 +296,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -298,8 +319,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -319,8 +342,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -340,8 +365,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -361,8 +388,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-12 all-products">
@@ -382,8 +411,10 @@
                                     </div>
                                 </div>
                                 <div class="wishlist-cart">
-                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top" title="Add To Wishlist"></i>
-                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top" title="Add To Cart"></i>
+                                    <i class="fa-solid fa-heart" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Wishlist"></i>
+                                    <i class="fa-solid fa-cart-shopping" data-toggle="tooltip" data-placement="top"
+                                        title="Add To Cart"></i>
                                 </div>
                             </div>
                         </div>
@@ -613,6 +644,9 @@
             </div>
         </section>
     </main>
+    <!-- Main Area -->
+
+    <!-- Footer Area -->
     <footer>
         <section id="footer">
             <div class="container footer-background-color">
@@ -688,21 +722,15 @@
             </div>
         </section>
     </footer>
+    <!-- Footer Area -->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
         integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"
         integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./assets/slick-1.8.1/slick/slick.js"></script>
-    <script src="./assets/slick-1.8.1/slick/slick.min.js"></script>
     <script src="./assets/js/shop.js"></script>
     <script src="./assets/js/common.js"></script>
 </body>
